Changed input-placeholder to attribute-name

--- a/options.html
+++ b/options.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-placeholder patterns<br>
-<textarea id="placeholderPatterns" rows="24" cols="120">
+name patterns<br>
+<textarea id="namePatterns" rows="24" cols="120">
 </textarea>
 <br>
 
